# CloudOpsTools

./: .auto-claude-status  .encryption_salt  .env.example  .gitignore  BROWSER_DEBUGGING_STEPS.md  CLAUDE.md  CSV_LOAD_TROUBLESHOOTING.md  Dockerfile  MIGRATION_GUIDE.md  README.md  cookies.txt  cookies_fresh.txt  debug_cookies.txt  monitor-health.sh  package.json  phase4-github-issue.md  pnpm-lock.yaml  pyproject.toml  pytest.ini  quick-rollback.sh  run-tests.sh  setup.sh  start-staging.sh  start.sh  stop.sh  test-ci.sh  test_bad_headers.csv  test_change.csv  test_debug.csv  test_format1.csv  test_format2.csv  test_upload.csv  web_session.txt
.auto-claude/specs/001-rebrand-from-pcm-ops-rackspace-txdir-to-cloudopsto/: build-progress.txt  complexity_assessment.json  context.json  critique_report.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  research.json  review_state.json  spec.md  task_logs.json  task_metadata.json
.auto-claude/specs/001-rebrand-from-pcm-ops-rackspace-txdir-to-cloudopsto/memory/: attempt_history.json  build_commits.json  codebase_map.json
.auto-claude/specs/001-rebrand-from-pcm-ops-rackspace-txdir-to-cloudopsto/memory/session_insights/: session_001.json  session_002.json  session_003.json  session_004.json  session_005.json  session_006.json  session_007.json  session_008.json  session_009.json  session_010.json  session_011.json  session_012.json  session_013.json  session_014.json  session_015.json  session_016.json  session_017.json  session_018.json  session_019.json  session_020.json
.auto-claude/specs/002-rate-limiting-implementation/: build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  research.json  review_state.json  spec.md  task_logs.json
.auto-claude/specs/002-rate-limiting-implementation/memory/: attempt_history.json  build_commits.json  codebase_map.json
.auto-claude/specs/002-rate-limiting-implementation/memory/session_insights/: session_001.json  session_002.json
.auto-claude/specs/003-complete-phase-1-security-test-suite/: build-progress.txt  implementation_plan.json
.auto-claude/specs/004-refactor-aws-implementation-into-provider-abstract/: build-progress.txt  qa_report.md
backend/: __init__.py  main.py  run.py
backend/api/: auth.py  feature_flags.py  scripts.py  tools.py
backend/core/: __init__.py  config.py  feature_flags.py  limiter.py  logging_config.py  security.py  templates.py
backend/core/docs/: scripts.py
backend/core/schemas/: aws_auth.py  script.py
backend/core/types/: api.py  sqlalchemy.py
backend/core/utils/: credential_helpers.py  database_helpers.py  encryption.py  logging_config.py  session_store.py  type_helpers.py
backend/db/: base.py  init_db.py  session.py
backend/db/models/: __init__.py  account.py  change.py  execution.py  script.py  session_store.py  types.py
backend/db/seeds/: tool_disk_checker.py
backend/providers/: README.md  __init__.py  base.py
backend/providers/aws/: README.md  __init__.py  provider.py
backend/providers/aws/common/schemas/: __init__.py  account.py
backend/providers/aws/common/services/: account_manager.py  credential_manager.py  script_executor.py
backend/providers/aws/script_runner/: __init__.py
backend/providers/aws/script_runner/api/: __init__.py  accounts.py  aws_operations.py  changes.py  executions.py  instances.py  org.py
backend/providers/linux/: README.md  __init__.py
backend/providers/linux/disk_checker/: __init__.py
backend/static/css/: custom-theme.css  styles.css
backend/static/js/: linux-qc-patching-post.js  linux-qc-patching-prep-step2.js  linux-qc-patching-prep.js  theme-switcher.js
backend/templates/: base.html  cloud_service_uptime.html  index.html
backend/templates/aws/: auth.html  linux_qc_patching_post.html  linux_qc_patching_prep.html  sft_fixer.html  tools.html
backend/templates/aws/shared/: change_management.html
backend/templates/azure/: auth.html
backend/templates/errors/: 404.html  500.html
backend/templates/gcp/: auth.html
backend/templates/partials/: backend_status.html  service_status.html
backend/templates/servicenow/: auth.html
backend/web/: __init__.py  home.py
backend/web/aws/: auth.py  linux_qc_patching_post.py  linux_qc_patching_prep.py  sft_fixer.py
backend/web/azure/: __init__.py  auth.py
backend/web/gcp/: __init__.py  auth.py
backend/web/servicenow/: __init__.py  auth.py
backend/web/utils/: __init__.py  auth.py
backend/web/workflows/: __init__.py  auth.py  linux_qc_patching_post.py  linux_qc_patching_prep.py  sft_fixer.py
data/: .encryption_salt  pcm_ops_tools.db
docs/: Azure-Integration-Plan.md  CodeRabbit-Issues-Analysis.md  Implementation-Action-Plan.md  PRD-Production-Readiness.md  Phase-0-Completion-Summary.md  Rollback-Procedures.md  SPECIALIZED_TOOLS_PATTERN.md  Systemic-Code-Improvements.md  architecture.md
docs/adr/: README.md  infrastructure-compatibility-improvements.md
frontend/: README.md
scripts/: setup_database.py  test_config_changes.sh  test_rate_limits.sh
test-reports/: test-summary.txt
tests/: __init__.py  conftest.py  test_critical_paths.py  test_rate_limiting.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/security/: __init__.py  test_authentication.py  test_data_protection.py
tests/unit/: __init__.py  test_config.py  test_feature_flags.py
tests/utils/: __init__.py  factories.py  helpers.py
(+19 files in other folders)
