[tool.poetry]
name = "pcm-ops-tools"
version = "0.1.0"
description = "PCM-Ops Tools - A comprehensive platform for running operations across multiple cloud providers"
authors = ["PCM-Ops Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web server
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.21.1"}
python-multipart = ">=0.0.6"
httpx = ">=0.24.0"
requests = ">=2.31.0"

# Rate limiting
slowapi = ">=0.1.9"

# Database
sqlalchemy = ">=2.0.8"
aiosqlite = ">=0.18.0"  # For SQLite async support
psycopg2-binary = ">=2.9.5"  # For PostgreSQL support
alembic = ">=1.10.3"

# AWS
boto3 = ">=1.28.0"
botocore = ">=1.31.0"

# Utilities
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=0.21.0"
python-dateutil = ">=2.8.2"
typing-extensions = ">=4.7.1"

# Logging
loguru = ">=0.7.0"

# Frontend dependencies (Flask)
flask = ">=2.3.0"
jinja2 = ">=3.1.0"
werkzeug = ">=2.3.0"
flask-wtf = ">=1.2.1"
itsdangerous = ">=2.2.0"
blinker = ">=1.9.0"
fastmcp = "^2.10.6"
cryptography = "^45.0.6"
aiobotocore = "^2.26.0"
types-aiobotocore = "^2.26.0.post2"

# Optional: Redis for distributed rate limiting
redis = {extras = ["hiredis"], version = ">=4.5.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.3.1"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
pytest-xdist = ">=3.3.1"  # Parallel test execution
pytest-html = ">=3.2.0"   # HTML test reports
pytest-timeout = ">=2.1.0"  # Test timeouts
httpx = ">=0.24.0"  # For async client testing
faker = ">=19.0.0"  # Test data generation
factory-boy = ">=3.3.0"  # Object factories for tests

# Type checking
mypy = ">=1.3.0"
types-sqlalchemy = ">=1.4.0"
types-requests = ">=2.31.0"
types-boto3 = ">=1.0.0"
# types-pydantic not needed for Pydantic v2
types-python-dateutil = ">=2.8.0"

# Code formatting and linting
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
ruff = ">=0.0.270"
pyright = "^1.1.403"
playwright = "^1.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Gradually enable stricter typing
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Specify base directory for imports
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "sqlalchemy.*",
    "boto3.*",
    "botocore.*",
    "flask.*",
    "werkzeug.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontend.blueprints.aws.script_runner"
# Allow Any returns for jsonify() calls - this is a Flask library limitation
disable_error_code = "no-any-return"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --strict-markers --tb=short --cov=backend --cov-report=term-missing --cov-report=html:htmlcov"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "critical: marks tests as critical path tests",
    "feature_flag: marks tests that require feature flags",
    "database: marks tests that require database",
    "api: marks tests for API endpoints",
    "web: marks tests for web interface",
    "rollback: marks tests for rollback functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]